# PrimeCompression

./: CMakeLists.txt  actions.h  config-test.json  config.cpp  config.h  config.json  element.h  fast_integer_exponentiation.cpp  fast_integer_exponentiation.h  field.cpp  field.h  fieldsearch.cpp  fieldsearch.h  main.cpp  printallsums.h  search.cpp  search.h  searchsettings.h  searchthread.cpp  searchthread.h  threadsettings.h
actions/: action.h  actionfactory.h  distance.cpp  distance.h  first_occur.cpp  first_occur.h  match.cpp  match.h  print.cpp  print.h
test/: main.cpp  mod.cpp  test.h
test/element/: add.cpp
